--- a/styles.css
+++ b/styles.css
@@ -1,200 +1,147 @@
-        /*
-=============== 
-Fonts
-===============
-*/
-        
-        @import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
-        /*
-=============== 
-Variables
-===============
-*/
-        
-         :root {
-            /* dark shades of primary color*/
-            --clr-primary-1: hsl(205, 86%, 17%);
-            --clr-primary-2: hsl(205, 77%, 27%);
-            --clr-primary-3: hsl(205, 72%, 37%);
-            --clr-primary-4: hsl(205, 63%, 48%);
-            /* primary/main color */
-            --clr-primary-5: hsl(205, 78%, 60%);
-            /* lighter shades of primary color */
-            --clr-primary-6: hsl(205, 89%, 70%);
-            --clr-primary-7: hsl(205, 90%, 76%);
-            --clr-primary-8: hsl(205, 86%, 81%);
-            --clr-primary-9: hsl(205, 90%, 88%);
-            --clr-primary-10: hsl(205, 100%, 96%);
-            /* darkest grey - used for headings */
-            --clr-grey-1: hsl(209, 61%, 16%);
-            --clr-grey-2: hsl(211, 39%, 23%);
-            --clr-grey-3: hsl(209, 34%, 30%);
-            --clr-grey-4: hsl(209, 28%, 39%);
-            /* grey used for paragraphs */
-            --clr-grey-5: hsl(210, 22%, 49%);
-            --clr-grey-6: hsl(209, 23%, 60%);
-            --clr-grey-7: hsl(211, 27%, 70%);
-            --clr-grey-8: hsl(210, 31%, 80%);
-            --clr-grey-9: hsl(212, 33%, 89%);
-            --clr-grey-10: hsl(210, 36%, 96%);
-            --clr-white: #fff;
-            --clr-red-dark: hsl(360, 67%, 44%);
-            --clr-red-light: hsl(360, 71%, 66%);
-            --clr-green-dark: hsl(125, 67%, 44%);
-            --clr-green-light: hsl(125, 71%, 66%);
-            --clr-black: #222;
-            --ff-primary: "Roboto", sans-serif;
-            --ff-secondary: "Open Sans", sans-serif;
-            --transition: all 0.3s linear;
-            --spacing: 0.1rem;
-            --radius: 0.25rem;
-            --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-            --max-width: 1170px;
-            --fixed-width: 620px;
-        }
-        /* 
-================
-Global Styles
-================
-*/
-        
-        *,
-         ::after,
-         ::before {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        
-        body {
-            font-family: var(--ff-secondary);
-            background-color: var(--clr-grey-10);
-            /* line-height: 1.5; */
-            font-size: 0.875rem;
-        }
-        
-        ul {
-            list-style-type: none;
-        }
-        
-        a {
-            text-decoration: none;
-        }
-        
-        h1 {
-            color: var(--clr-primary-5);
-            font-size: 1.5rem;
-        }
-        /* 
-================
-Navbar
-================
-*/
-        
-        nav {
-            background-color: var(--clr-white);
-            box-shadow: var(--light-shadow);
-        }
-        
-        .nav-header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 1rem;
-        }
-        
-        .nav-toggle {
-            font-size: 1.5rem;
-            color: var(--clr-primary-5);
-            background: transparent;
-            border-color: transparent;
-            transition: all 0.3s ease;
-            cursor: pointer;
-        }
-        
-        .nav-toggle:hover {
-            color: var(--clr-primary-1);
-            transform: rotate(90deg);
-        }
-        
-        .logo {
-            height: 40px;
-        }
-        
-        .links a {
-            color: var(--clr-grey-3);
-            font-size: 1rem;
-            /* text-transform: capitalize; */
-            letter-spacing: var(--spacing);
-            display: block;
-            padding: 0.5rem 1rem;
-            transition: var(--transition);
-        }
-        
-        .links a:hover {
-            background: var(--clr-primary-8);
-            color: var(--clr-primary-5);
-            padding-left: 1.5rem;
-        }
-        
-        .social-icons {
-            padding: 1rem 0;
-            display: none;
-        }
-        
-        .show-social-icons {
-            display: flex;
-        }
-        
-        .social-icons li {
-            color: var(--clr-primary-5);
-            padding: 0 1rem;
-            transition: all 0.3s ease;
-            cursor: pointer;
-        }
-        
-        .social-icons li:hover {
-            color: var(--clr-primary-7);
-        }
-        
-        .links {
-            height: 0;
-            overflow: hidden;
-            transition: var(--transition);
-        }
-        
-        .show-links {
-            height: 10rem;
-        }
-        /* Desktop mode */
-        
-        @media screen and (min-width: 800px) {
-            .nav-toggle {
-                display: none;
-            }
-            .nav-center {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                padding: 0 8rem;
-            }
-            .links {
-                height: auto;
-                display: flex;
-            }
-            .links a {
-                padding: 0 2rem;
-            }
-            .links a:hover {
-                background: transparent;
-                color: var(--clr-primary-5);
-                padding: 0 2rem;
-            }
-            .social-icons {
-                display: flex;
-            }
-            .social-icons li {
-                padding: 0 .8rem;
-            }
-        }
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+
+body {
+    background-color: #9fbdff2c;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 3px 10px 3px rgba(0, 0, 0, 0.116);
+    user-select: none;
+    background-color: white;
+}
+
+nav .nav-center {
+    /* width: 90%; */
+    display: grid;
+    grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+.nav-header {
+    text-align: center;
+    color: #0077ff;
+    cursor: default;
+    font-size: 1.3rem;
+    padding: 17px 0px 17px 20px;
+}
+
+.nav-header #toggle {
+    display: none;
+}
+
+.nav-links,
+.nav-social-icons {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style-type: none;
+}
+
+.nav-links {
+    width: 310px;
+}
+
+.nav-social-icons {
+    width: 160px;
+    padding-right: 20px;
+}
+
+.nav-links li a {
+    color: #585858;
+    text-decoration: none;
+    font-size: 1.02rem;
+    letter-spacing: 1.3px;
+    transition: all 0.5s ease;
+}
+
+.nav-links li a:hover {
+    color: #0077ff;
+}
+
+.nav-social-icons li a {
+    text-decoration: none;
+    color: #0077ff;
+    transition: all 0.5s ease;
+}
+
+.nav-social-icons li a:hover {
+    color: #585858;
+}
+
+@media only screen and (max-width: 800px) {
+    /* Parent */
+    .nav-center {
+        display: grid;
+        grid-template-rows: auto auto auto;
+        width: 100%;
+    }
+    /* Childrens */
+    .nav-header {
+        width: 100%;
+        grid-column: 1 / 6;
+        display: flex;
+        justify-content: space-between;
+        padding-right: 20px;
+    }
+    .nav-links {
+        grid-column: 1 / 6;
+        grid-row: 2/3;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        height: 0;
+        overflow: hidden;
+        transition: all 0.3s ease;
+    }
+    .show-nav-links {
+        height: 173px;
+        /* transition: all 1s ease; */
+    }
+    .nav-links li {
+        padding: 12px 0 12px 20px;
+        width: 100%;
+        transition: all 0.3s ease;
+        cursor: pointer;
+    }
+    .nav-links li:hover {
+        background-color: #3392ff42;
+        padding-left: 25px;
+    }
+    .nav-social-icons {
+        grid-column: 1/3;
+        justify-self: start;
+        padding: 10px 0 10px 20px;
+        width: 100%;
+        display: none;
+    }
+    .show-nav-social-icons {
+        display: flex;
+    }
+    .nav-social-icons li {
+        padding: 0 30px 0 0;
+    }
+    .nav-header #toggle {
+        display: inline-block;
+        border: none;
+        background-color: transparent;
+        font-size: 1.3rem;
+        transition: all 0.6s ease;
+        color: #0077ff;
+        cursor: pointer;
+    }
+    .nav-header #toggle:hover {
+        transform: rotate(90deg);
+        color: #585858;
+    }
+}
